--- a/src/components/x/form.css
+++ b/src/components/x/form.css
@@ -46,7 +46,8 @@ input[type=time],
 input[type=url],
 input[type=week],
 input:not([type]),
-textarea {
+textarea,
+select {
     position: relative;
     width: 100%;
     height: var(--forms-height);
@@ -59,38 +60,8 @@ textarea {
     border-style: solid;
     border-color: var(--forms-border-color);
     border-radius: var(--forms-border-radius);
-    appearance: none;
-    
-    &:focus {
-        border-color: var(--forms-border-color-focused);
-        box-shadow: 0 0 0 1px var(--forms-border-color-focused);
-    }
-    &.error {
-        border-color: var(--forms-border-color-error);
-    }
-    &:focus.error {
-        border-color: var(--forms-border-color-error);
-        box-shadow: 0 0 0 1px var(--forms-border-color-error);
-    }
-}
-
-input[type=color],
-input[type=date],
-input[type=datetime],
-input[type=tel],
-input[type=email],
-input[type=month],
-input[type=number],
-input[type=password],
-input[type=search],
-input[type=text],
-input[type=time],
-input[type=url],
-input[type=week],
-input:not([type]),
-textarea,
-select {
     background-color: var(--forms-background-color);
+    appearance: none;
     
     &[readonly],
     &[readonly]:focus {
@@ -107,6 +78,25 @@ select {
         cursor: not-allowed !important;
         box-shadow: none;
     }
+    
+    &:focus {
+        border-color: var(--forms-border-color-focused);
+        box-shadow: 0 0 0 1px var(--forms-border-color-focused);
+    }
+    &.error,
+    &.error:focus,
+    &:invalid,
+    &:invalid:focus {
+        border-color: var(--forms-border-color-error);
+        box-shadow: 0 0 0 1px var(--forms-border-color-error);
+    }
+}
+
+select {
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23000000%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+    background-repeat: no-repeat;
+    background-position: right 8px top 52%, 0 0;
+    background-size: 10px;
 }
 
 ::placeholder {
