--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,7 +14,7 @@ Created by andreyshpigunov on 25.05.2021.
     --font-color: #000;
     --background-color: #fff;
     --link-transition: all .15s ease-out;
-    --table-padding: 2px 6px;
+    /* --table-padding: 2px 6px; */
     --code-font-color: #000;
     --code-background-color: #f8f8f8;
 }
