--- a/src/css/x.css
+++ b/src/css/x.css
@@ -17,6 +17,7 @@ Created by andreyshpigunov on 25.05.2021.
 @import "../components/x/form.css";
 @import "../components/x/buttons.css";
 @import "../components/x/sheets.css";
+@import "../components/x/slides.css";
 @import "../components/x/sticky.css";
 @import "../components/x/modal.css";
 @import "../components/x/debug.css";
